Change flex-direction to column to ensure no overlap happens in media query for smaller screens

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -121,6 +121,10 @@ p {
     flex: 1 0 33%;
   }
 
+  .college {
+    flex-direction: column;
+  }
+
 }
 
 @media screen and (min-width: 59.375em) { /* 950 / 16 = 59.375*/
